Fix Perfect Moment timing and add fluctuating rhythm
Fixed issues:
- Removed hint text that was overlapping with round indicator
- Corrected timing windows to match animation:
  - Perfect: 2.4s-2.7s (when ring overlaps center)
  - Good: 2.1s-2.9s (close to center)
  - Previously was 1.9-2.1s which didn't match visual

Added difficulty:
- Fluctuating speed animation with varying shrink rates
- Pulsating opacity (0.4-1.0) to throw off timing
- Ring now speeds up and slows down unpredictably
- Creates challenging rhythm game instead of linear timing

--- a/src/life/PerfectMoment.css
+++ b/src/life/PerfectMoment.css
@@ -130,18 +130,42 @@
   0% {
     width: 280px;
     height: 280px;
-    opacity: 0.4;
+    opacity: 0.5;
   }
-  33% {
+  15% {
+    width: 240px;
+    height: 240px;
+    opacity: 0.8;
+  }
+  30% {
+    width: 210px;
+    height: 210px;
+    opacity: 0.6;
+  }
+  45% {
+    width: 170px;
+    height: 170px;
+    opacity: 0.9;
+  }
+  60% {
+    width: 140px;
+    height: 140px;
     opacity: 0.7;
   }
-  66% {
+  75% {
+    width: 110px;
+    height: 110px;
     opacity: 1;
+  }
+  90% {
+    width: 90px;
+    height: 90px;
+    opacity: 0.8;
   }
   100% {
     width: 80px;
     height: 80px;
-    opacity: 0.3;
+    opacity: 0.4;
   }
 }
 
